--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -791,6 +791,10 @@ input, select, textarea {
 			font-family: 'Font Awesome 5 Brands';
 		}
 
+		#facebook{
+			padding-right: 50px;
+		}
+
 /* List */
 
 	ol {
@@ -986,7 +990,7 @@ input, select, textarea {
 			}
 
 				ul.icons li .icon:before {
-					font-size: 1.5em;
+					font-size: 3em;
 				}
 
 /* Table */
